# hashcat

./: .appveyor.yml  .appveyor.yml.old  .editorconfig  .giQHRMTJGCFXBGFWfegarhszdxMCVTSERA  .gitattributes  .gitignore  .gitmodules  .indent.pro  .travis.yml  BIG-WPA-LIST-2.hcstat2  BUILD.md  BUILD_CYGWIN.MD  BUILD_CYGWIN.md  BUILD_Docker.md  BUILD_MSYS2.md  BUILD_WSL.md  BUILD_macOS.md  Brewfile  CMakeLists.txt  GDict.hcstat2  Hackerspray.git  Instagram Passwort  LICENSE  LICENSE.md  Makefile  Makefile.am  README.md  SECURITY.md  Sam Greer  Top258Million-probable.hcstat2  Top32Million-probable.hcstat2  Two_Word_Full.hcstat2  all.hcstat2  autoclean.sh  autogen.sh  b2test.hash  b2test.hash_s_a1  b2test.sh  bfield.hcstat2  blackstar.hcstat2  (+65 more)
OpenCL/: amp_a0.cl  amp_a1.cl  amp_a3.cl  check_multi_comp4.c  check_multi_comp4_bs.c  check_single_comp4.c  check_single_comp4_bs.c  common.c  gpu_aes256_amd.c  inc_amp.h  inc_bfacs_common.cl  inc_bignum_operations.cl  inc_bignum_operations.h  inc_bip39.cl  inc_bip39.h  inc_cipher_aes-gcm.cl  inc_cipher_aes-gcm.h  inc_cipher_aes.cl  inc_cipher_aes.h  inc_cipher_aes256.cl  inc_cipher_camellia.cl  inc_cipher_camellia.h  inc_cipher_cast.cl  inc_cipher_cast.h  inc_cipher_des.cl  inc_cipher_des.h  inc_cipher_kuznyechik.cl  inc_cipher_kuznyechik.h  inc_cipher_rc4.cl  inc_cipher_rc4.h  inc_cipher_serpent.cl  inc_cipher_serpent.h  inc_cipher_serpent256.cl  inc_cipher_twofish.cl  inc_cipher_twofish.h  inc_cipher_twofish256.cl  inc_common.cl  inc_common.h  inc_comp_multi.cl  inc_comp_multi_bs.cl  (+2137 more)
Python/: generic_hash_mp.py  generic_hash_sp.py  hcmp.py  hcshared.py  hcsp.py
amd/: amp_a0_v1.cl  amp_a0_v2.cl  amp_a0_v4.cl  amp_a1_v1.cl  amp_a1_v2.cl  amp_a1_v4.cl  amp_a3_v1.cl  amp_a3_v2.cl  amp_a3_v4.cl  check_multi_vect1_comp4.c  check_multi_vect1_comp4_warp.c  check_multi_vect1_comp4_warp_bs.c  check_multi_vect2_comp4.c  check_multi_vect2_comp4_warp.c  check_multi_vect4_comp4.c  check_multi_vect4_comp4_warp.c  check_single_vect1_comp4.c  check_single_vect1_comp4_warp.c  check_single_vect1_comp4_warp_bs.c  check_single_vect2_comp4.c  check_single_vect2_comp4_warp.c  check_single_vect4_comp4.c  check_single_vect4_comp4_warp.c  common_amd.c  gpu_aes256_amd.c  gpu_serpent256_amd.c  gpu_twofish256_amd.c  m00000_a0.cl  m00000_a1.cl  m00000_a3.cl  m00010_a0.cl  m00010_a1.cl  m00010_a3.cl  m00020_a0.cl  m00020_a1.cl  m00020_a3.cl  m00030_a0.cl  m00030_a1.cl  m00030_a3.cl  m00040_a0.cl  (+317 more)
charsets/: DES_alpha.charset  DES_full.charset  DES_hex.charset  DES_portion_0.charset  DES_portion_1.charset  DES_portion_2.charset  DES_portion_3.charset  DES_portion_4.charset  DES_portion_5.charset  DES_portion_6.charset  DES_portion_7.charset  DES_portion_8.charset  DES_portion_9.charset  DES_portion_A.charset  DES_portion_B.charset  DES_portion_C.charset  DES_portion_D.charset  DES_portion_E.charset  DES_portion_F.charset  base58.hcchr
cmake/: config.h.in  hashcat.rc.in
docker/: BinaryPackage.arch  BinaryPackage.ubuntu20
docs/: API.md  BUILD.md  changes.txt  compiling hashcat windows msys.txt  contact.txt  credits.txt  device_status_code.txt  example_hashes.csv  exit_status_code.txt  hashcat-assimilation-bridge-development.md  hashcat-assimilation-bridge.md  hashcat-brain.md  hashcat-plugin-development-guide.md  hashcat-python-plugin-development-guide.md  hashcat-python-plugin-quickstart.md  hashcat-python-plugin-requirements.md  hashcat-remote-bridge.md  keyboard-layout-mapping.md  license.txt  limits.txt  msys2_win.md  performance.txt  readme.txt  rules.txt  slow-candidates-mode.md  status_codes.txt  team.txt  user_manuals.txt
hcstat2/: 2wordsspace_and_no_space_left.hcstat2  BEncyclopedia.hcstat2  BIG-WPA-LIST-1.hcstat2  BIG-WPA-LIST-3.hcstat2  NetZwerg.hcstat2  Top196-probable.hcstat2  Top2Billion_probable.hcstat2  Top95Thousand-probable.hcstat2  Word02.hcstat2  abc.hcstat2  aha.hcstat2  basewords.hcstat2  casio.hcstat2  dsl.hcstat2  eharmony.hcstat2  english.hcstat2  ffgbeach.hcstat2  gamigo.hcstat2  gaming.hcstat2  hellfire.hcstat2  lower2.hcstat2  mayhem.hcstat2  misc2013.hcstat2  mixed.hcstat2  names.hcstat2  net.hcstat2  opisrael.hcstat2  opnkorea.hcstat2  opsea.hcstat2  sunrise.hcstat2  tomsawyer.hcstat2  whitefox.hcstat2
hcstat2s/: L33t_Dict_Full.hcstat2  bigdict.hcstat2  cracklib.hcstat2  (+2 more)
src/: Makefile  Makefile.am  affinity.c  ascii_digest.c  attack_mode.c  autotune.c  backend.c  benchmark.c  bitmap.c  bitops.c  brain.c  bridges.c  check_hash.c  combinator.c  common.c  convert.c  converter.c  cpt.c  cpu_aes.c  cpu_blake.c  cpu_crc32.c  cpu_des.c  cpu_features.c  cpu_md4.c  cpu_md5.c  cpu_rules.c  cpu_sha1.c  cpu_sha256.c  data.c  debugfile.c  decoder.c  dictstat.c  dispatch.c  dynloader.c  emu_general.c  emu_inc_bignum_operations.c  emu_inc_bip39.c  emu_inc_cipher_aes.c  emu_inc_cipher_camellia.c  emu_inc_cipher_des.c  (+117 more)
src/bridges/: bridge_argon2id_reference.c  bridge_argon2id_reference.mk  bridge_python_generic_hash_mp.c  bridge_python_generic_hash_mp.mk  bridge_python_generic_hash_sp.c  bridge_python_generic_hash_sp.mk  bridge_remote.argon.c  bridge_remote.argon.mk  bridge_remote.smix.c  bridge_remote.smix.mk  bridge_scrypt_jane.c  bridge_scrypt_jane.mk  bridge_scrypt_yescrypt.c  bridge_scrypt_yescrypt.mk
src/cpu/: cpu-aes.c  cpu-des.c  cpu-md5.c  cpu-sha1.c  cpu-sha256.c  cpu_rules.c
src/hwmon/: ext_ADL.c  ext_nvapi.c  ext_nvml.c  ext_xnvctrl.c
src/lzma_sdk/: Alloc.c  Lzma2Dec.c  LzmaDec.c
src/modules/: argon2_common.c  meson.build  module_00000.c  module_00010.c  module_00011.c  module_00012.c  module_00020.c  module_00021.c  module_00022.c  module_00023.c  module_00024.c  module_00030.c  module_00040.c  module_00050.c  module_00060.c  module_00070.c  module_00100.c  module_00101.c  module_00110.c  module_00111.c  module_00112.c  module_00120.c  module_00121.c  module_00122.c  module_00124.c  module_00125.c  module_00130.c  module_00131.c  module_00132.c  module_00133.c  module_00140.c  module_00141.c  module_00150.c  module_00160.c  module_00170.c  module_00200.c  module_00300.c  module_00400.c  module_00500.c  module_00501.c  (+572 more)
(+1993 files in other folders)
